# Sidon

./: .env.example  .gitignore  CLAUDE.md  README.md  checkpoint_ids.txt  eval_rtf.py  eval_rtf.sh  export.py  export_diffusion_dialogue.py  infer.ipynb  infer.py  infer.sh  infer_eval.sh  infer_geneses.py  infer_geneses.sh  infer_size_ablation.sh  pyproject.toml
config/data/: dialogue.yaml  dialogue_preprocessed.yaml  dialogue_preprocessed_120s.yaml  preprocessed.yaml  preprocessed_48k.yaml  sg_podcast_online_48k.yaml  webdataset_preprocess_24k.yaml  webdataset_preprocess_48k.yaml
config/model/: dialogue_sidon.yaml  dialogue_sidon_feature_predictor.yaml  dialogue_sidon_feature_predictor_transformer_disc.yaml  diffusion_dialogue_sidon.yaml  diffusion_dialogue_sidon_ac.yaml  diffusion_dialogue_sidon_decoder_finetune.yaml  diffusion_dialogue_sidon_small.yaml  diffusion_dialogue_sidon_wo_diffusion_head.yaml  diffusion_dialogue_sidon_wo_vae_latent.yaml  diffusion_dialogue_sidon_xsmall.yaml  geneses_dialogue.yaml  sepformer_dialogue.yaml  (+3 more)
runpod/: README_callcentre.md  bootstrap.sh  bootstrap_fe.sh  bootstrap_podcast.sh  build_ckpt_from_hf.py  clean_teacher_datasets.json  degradations.py  dnsmos_metric.py  dryrun_v01_decoder.py  dryrun_v01_direct.py  go_decoder_b6w6.sh  go_fe_realdeg.sh  go_my_movie.sh  go_podcast.sh  infer_callcentre.py  inspect_v01.py  inspect_v01b.py  launch_pod.py  pod_prep_infer.py  prepare_clean48k.py  prepare_podcast_clean.py  prepare_sg_data.py  run_decoder_callcentre.sh  run_fe_callcentre.sh  run_sidon_dryrun.sh  sync_and_launch.sh  train_decoder_callcentre.py  train_fe_callcentre.py
scripts/: check_dialogue_datamodule.py  check_dialogue_preprocessed_datamodule.py  dialogue_inference.py
spaces/: app.py  requirements.txt
(+50 files in other folders)
