[project]
name = "sidon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wataru Nakata", email = "wataru9871@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets==2.17.1",
    "descript-audio-codec>=1.0.0",
    "diffusers>=0.36.0",
    "flash-attn>=2.8.3",
    "flow-matching>=1.0.10",
    "hydra-core>=1.3.2",
    "lightning>=2.5.5",
    "mmdit>=0.3.0",
    "peft>=0.16.0",
    "pyroomacoustics",
    "ray[data]>=2.9.0",
    "s3fs>=2023.9.0,<2023.11",
    "silero-vad>=6.2.0",
    "speechbrain>=1.0.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.7.0",
    "transformers>=4.56.1",
    "wandb>=0.18.7",
    "webdataset>=0.2.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
